--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@ layout: page
 title: Nirvana
 subtitle: This is where I put my thoughts to rest.
 use-site-title: true
+bigimg:
+  - "/img/bigimg/DSC02005.JPG" : "Dubailand,UAE(2015)"
+  - "/img/bigimg/P5011070.JPG" : "Jebel Hafeet,UAE(2015)"
+  - "/img/bigimg/DSC_6995.JPG" : "Thimphu,Bhutan(2016)"
+  - "/img/bigimg/DSC_6969.JPG" : "Thimpu,Bhutan(2016)"
 ---
 
 <div class="posts-list">
