--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Nirvana
-subtitle: This is where I put my thoughts to rest.
+title: Geomechanics
+subtitle: This is a blog about my work.
 use-site-title: true
 bigimg:
   - "/img/bigimg/DSC02005.JPG" : "Dubailand,UAE(2015)"
