--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ bigimg:
   - "/img/bigimg/P5011070.JPG" : "Jebel Hafeet,UAE(2015)"
   - "/img/bigimg/DSC_6995.JPG" : "Thimphu,Bhutan(2016)"
   - "/img/bigimg/DSC_6969.JPG" : "Thimpu,Bhutan(2016)"
+  - "/img/HarperrigReservoir.jpg" : "Harperrig Reservoir,Scotland(2018)"
 ---
 
 <div class="posts-list">
