Updated the title and subtitle

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Geomechanics
-subtitle: This is a blog about my work.
+title: Geoscience
+subtitle: PhD student, Edinburgh Time Lapse Project
 use-site-title: true
 bigimg:
   - "/img/HarperrigReservoir.jpg" : "Harperrig Reservoir,Scotland(2018)"
