--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Geoscience
+title: Earth Science
 subtitle: PhD student, Edinburgh Time Lapse Project
 use-site-title: true
 bigimg:
